[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tiled_listener"
description = "Process that listens on a queue for items to add to tiled"
readme = { file = "README.md", content-type = "text/markdown" }

requires-python = ">=3.11"



classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11"
]

dependencies = [
   "pika",
   "tiled[client]"

]
dev-dependencies = [
    "pytest",
    "pre-commit",
    "flake8"
]

dynamic = ["version"]


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/_version.py"

[tool.hatch.metadata]
allow-direct-references = true